# ecom

./: .gitignore  README.md  gemini_image.py  meta_prompt.txt  prompts.json  pyproject.toml  test_similarity.py  title_prompt.txt
ecom/: __init__.py  catalog.py  client.py  config.py  pipeline.py  utils.py
ecom/generators/: __init__.py  adapt.py  all_prompt.py  image.py  prompt.py  title.py
manual_outputs/假发/2026-01-10-22-20-12/: analysis.txt  prompts.json  results.json
prompts/: adapt.txt  cover.txt  preview.txt  top.txt
